syntax = "proto3";
package calculator;
option go_package="github.com/Denchik203/Calculator/proto";

message ExpressionRequest{
    string expr = 1;
}

message Null{}

message ConfigRequest{
    int64 plus = 1;
    int64 minus = 2;
    int64 multiple = 3;
    int64 division = 4;
    int64 numOfWorkers = 5;
}

message ResultResponse{
    float result = 1;
    int64 status = 2;
    string endTime = 3;
}

service CalculatorService{
    rpc solve(ExpressionRequest) returns (ResultResponse);
    rpc update(ConfigRequest) returns (Null);
}
